# aws-finetuning-jumpstart-model

./: README.md  core.html  domain-adaption-finetuning-gpt-j-6b.ipynb  dvc.yaml  index.html  pyproject.toml  random.html  robots.txt  sbom.json  search.json  settings.ini  sitemap.xml
_proc/: index.ipynb  nbdev.yml  random.ipynb
_proc/_docs/: core.html  index.html  random.html  search.json  sitemap.xml
aws_finetuning_jumpstart_model/: _modidx.py  core.py
nbs/: 00_core.ipynb  index.ipynb  random.ipynb  sidebar.yml
