
[project]
name = "fine-tuning-aws-jumpstart"
version = "0.0.1"
description = ""
authors = [
    {name = "AleaxnderYu", email = "hyu4@nd.edu"},
]
dependencies = [
    "ipywidgets==7.0.0",
    "sagemaker>=2.169.0",
    "nbdev>=2.3.12",
    "dvc>=3.3.1",
]
requires-python = ">=3.9"
license = {text = "MIT"}
